kubernetes/applications/apps/vaultwarden/cloudflare-tunnel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-cloudflare
  namespace: apps
  labels:
    app: vaultwarden
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: vaultwarden.kernow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
